fix(grocery-list): fixes padding to wrap longer text

--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ body {
   text-align: center;
   width: 70%;
   margin: auto;
+  padding-bottom: 150px;
 }
 
 .title {
